--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.8",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@headlessui/react": "^1.6.1",
     "classnames": "^2.3.1",
-    "framer-motion": "^6",
+    "framer-motion": "^6.3.3",
     "next": "12.1.5",
+    "qs": "^6.10.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.30.0",
