--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.1",
     "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "framer-motion": "^6.3.3",
     "next": "12.1.5",
     "qs": "^6.10.3",
